Added readme and removed unneeded files. Tweaked window names.

--- a/kyan/configure_audio_devices.ui
+++ b/kyan/configure_audio_devices.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Configure Audio Devices</string>
+   <string>Audio Devices</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QComboBox" name="input_device_list">
