--- a/kyan/import_audio_file.ui
+++ b/kyan/import_audio_file.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Import Audio File</string>
+   <string>Import Audio</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
