--- a/kyan/import_audio_file.ui
+++ b/kyan/import_audio_file.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>main_window</class>
- <widget class="QMainWindow" name="main_window">
+ <class>import_audio_file</class>
+ <widget class="QMainWindow" name="import_audio_file">
   <property name="geometry">
    <rect>
     <x>0</x>
